k8s/apps/damara/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: damara-gateway
  namespace: damara

spec:
  gatewayClassName: nginx

  infrastructure:
    parametersRef:
      group: gateway.nginx.org
      kind: NginxProxy
      name: damara-proxy

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: Same
