k8s/apps/damara/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: damara-route
  namespace: damara

spec:
  parentRefs:
    - name: damara-gateway
      sectionName: http

  rules:
    # Backend
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /auth
        - path:
            type: PathPrefix
            value: /uploads
        - path:
            type: PathPrefix
            value: /socket.io

      backendRefs:
        - name: damara-be
          port: 3000

    # Frontend
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: damara-fe
          port: 80
